fixes for [APPDEV-2224] - [APPBUG-831] Unavailable products are not aligned with the rest of the products - [APPBUG-813] Currently not available
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@17738 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/product_grid.css
+++ b/projects/Media/docroot/assets/css/common/product_grid.css
@@ -311,7 +311,7 @@
 
 .grid-item-unavailable .grid-item-price,
 .grid-item-unavailable .grid-item-price-description {
-		display:none;
+		visibility:hidden;
 }
 
 .grid-item-unavailable .grid-item-controls {
